--- a/通用工具/LogCleaner/LogCleaner/LogCleaner.csproj
+++ b/通用工具/LogCleaner/LogCleaner/LogCleaner.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Quartzs\JobImpl.cs" />
     <Compile Include="Quartzs\QuartzHelper.cs" />
     <Compile Include="Utils\NLogHelper.cs" />
+    <Compile Include="Utils\SerializeHelper.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Windows\ConfigWindow.xaml.cs">
       <DependentUpon>ConfigWindow.xaml</DependentUpon>
