--- a/通用工具/LogCleaner/LogCleaner/LogCleaner.csproj
+++ b/通用工具/LogCleaner/LogCleaner/LogCleaner.csproj
@@ -106,8 +106,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\CleanDto.cs" />
     <Compile Include="Quartzs\CleanLogJob.cs" />
-    <Compile Include="Quartzs\JobImpl.cs" />
     <Compile Include="Quartzs\QuartzHelper.cs" />
     <Compile Include="Utils\NLogHelper.cs" />
     <Compile Include="Utils\SerializeHelper.cs" />
