--- a/通用工具/DemoBrowser/DemoBrowser/App.config
+++ b/通用工具/DemoBrowser/DemoBrowser/App.config
@@ -24,6 +24,12 @@
     <add key="TopicOrQueueName" value="naoms.to.fids" />
     <!--使用TopicOrQueue ,1是使用Topic，0使用Queue接收消息-->
     <add key="TopicOrQueue" value="1" />
+
+    <!--Unity程序的标题，可以通过spy++来查找-->
+    <add key="UnityWindowTitle" value="Unity3D"/>
+
+    <!--显示机位图的消息-->
+    <add key="UnityShowMessage" value="Unity"/>
   
   </appSettings>
     <startup> 
