--- a/通用工具/DemoBrowser/DemoBrowser/App.config
+++ b/通用工具/DemoBrowser/DemoBrowser/App.config
@@ -25,8 +25,8 @@
     <!--使用TopicOrQueue ,1是使用Topic，0使用Queue接收消息-->
     <add key="TopicOrQueue" value="1" />
 
-    <!--Unity程序的标题，可以通过spy++来查找-->
-    <add key="UnityWindowTitle" value="Unity3D"/>
+    <!--Unity程序的标题，可以通过spy++来查找 或先以窗口模式运行查看标题-->
+    <add key="UnityWindowTitle" value="3DPlaneSeatShow"/>
 
     <!--显示机位图的消息-->
     <add key="UnityShowMessage" value="Unity"/>
