--- a/通用框架/LearnWcf/ConsoleServiceHost/App.config
+++ b/通用框架/LearnWcf/ConsoleServiceHost/App.config
@@ -9,9 +9,8 @@
     <!--services 节点中包含着所有Service的配置说明-->
     <services>
       <!--
-      name：指定Service类型，全限定名  ServiceHost载入服务时，会到配置文件中的<services>下找有没有name属性跟服务配置的，并加载该配置
+      name：指定Service类型，全限定名  ServiceHost载入服务时，会到配置文件中的<services>下查找name属性跟服务匹配的配置，并加载该配置
       behaviorConfiguration：指定在<serviceBehaviors>下的一个<behavior>的name,定义service的行为
-      
       -->
       <service name="CommonWcfServiceLibrary.Service1" behaviorConfiguration="CmluServiceBehavior">
         
@@ -23,7 +22,9 @@
         bindingConfiguration: 指定binding的配置名，跟<bindings>下同类的<binding>的name匹配
         name: Endpoint的名称，可选属性
         -->
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="WsHttpBindingConfig" contract="CommonWcfServiceLibrary.IService1" />
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="WebHttpBindingConfig" behaviorConfiguration="webBehabior" contract="CommonWcfServiceLibrary.IService1" />
+        <endpoint address="ws" binding="wsHttpBinding" bindingConfiguration="WsHttpBindingConfig" contract="CommonWcfServiceLibrary.IService1" />
+        <endpoint address="basic" binding="basicHttpBinding" bindingConfiguration="BasicHttpBindingConfig" contract="CommonWcfServiceLibrary.IService1" />
         <!--暴露元数据的绑定  确实暴露了元数据，但不像设置元数据httpGetEnabled那样可以通过网页访问，可以通过添加webservice访问-->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         
@@ -45,6 +46,7 @@
       <!--指定一个或者多个系统定义的binding-->
       <wsHttpBinding>
         <!--
+        wsHttpBinding是支持WS-*系列特征和标准的， 如:session，事务，不支持跨平台
         name:标志绑定
         closeTimeout: 完成关闭操作的时间间隔，默认值为00:01:00
         maxBufferPoolSize:设置此绑定的缓冲池大小，默认值是512*1024byte  5242880=5M
@@ -55,6 +57,7 @@
         textEncoding: 此绑定上发出消息的字符集编码：  默认是Utf8TextEncoding 
         receiveTimeout: 指定为完成接收操作的时间间隔  默认值为00：01:00
         transactionFlow： 一个布尔值，指定绑定是否支持流动 WS-Transactions。默认值为 false。
+
         -->
         <binding name="WsHttpBindingConfig" closeTimeout="00:00:30" openTimeout="00:00:30" sendTimeout="00:00:40" receiveTimeout="00:01:00" maxBufferPoolSize="5242880" maxReceivedMessageSize="67108864" textEncoding="utf-8" messageEncoding="Text">
           <!--
@@ -85,9 +88,11 @@ maxStringContentLength
 
       <basicHttpBinding>
         <!--
+        basicHttpBinding是soap1.1协议的，没有安全性等特征，但兼容性好，支持java
         name:标志绑定
         closeTimeout: 完成关闭操作的时间间隔，默认值为00:01:00
         maxBufferPoolSize:设置此绑定的缓冲池大小，默认值是512*1024byte  5242880=5M
+        maxBufferSize:缓冲区的最大大小  默认值为 65,536 个字节。 
         maxReceivedMeassageSize: 此绑定通道上可以接受的最大消息大小（字节），超过此限制，接收方将删除该消息 134217728=128M
         messageEncoding: 对消息编码的编码器  Text:表示文本消息编码器（默认方式），Mtom:使用消息传输组织机制 1.0 (MTOM) 编码器。
         openTimeout:完成打开操作的时间间隔  默认值为00:01:00
@@ -97,9 +102,30 @@ maxStringContentLength
         transactionFlow： 一个布尔值，指定绑定是否支持流动 WS-Transactions。默认值为 false。
         -->
         <binding name="BasicHttpBindingConfig" closeTimeout="00:00:30" openTimeout="00:00:30" sendTimeout="00:00:40" receiveTimeout="00:01:00" maxBufferPoolSize="5242880" maxReceivedMessageSize="134217728" textEncoding="utf-8" messageEncoding="Text">
+          <!--None: 禁用安全性-->
           <security mode="None"/>
+          
         </binding>
       </basicHttpBinding>
+
+      <webHttpBinding>
+        <!--
+        webHttpBinding是restful风格的binding，返回xml或者json
+        closeTimeout: 完成关闭操作的时间间隔，默认值为00:01:00
+        sendTimeout: 完成发送操作的时间间隔  默认值为00：01:00
+        openTimeout:完成打开操作的时间间隔  默认值为00:01:00
+        receiveTimeout: 指定为完成接收操作的时间间隔  默认值为00：01:00
+        maxBufferPoolSize:设置此绑定的缓冲池大小，默认值是512*1024byte  5242880=5M
+        maxBufferSize:缓冲区的最大大小  默认值为 65,536 个字节。 
+        maxReceivedMeassageSize: 此绑定通道上可以接受的最大消息大小（字节），超过此限制，接收方将删除该消息 134217728=128M
+        WriteEncoding:属性表示采用的字符编码类型，默认采用UTF-8编码方式
+        -->
+        <binding  name="WebHttpBindingConfig" closeTimeout="00:00:30" openTimeout="00:00:30" sendTimeout="00:00:40" receiveTimeout="00:01:00" maxBufferPoolSize="5242880" maxReceivedMessageSize="134217728" writeEncoding="utf-8">
+          <!--None: 禁用安全性-->
+          <security mode="None" />
+        </binding>
+      </webHttpBinding>
+      
     </bindings>
   
     <behaviors>
@@ -113,13 +139,16 @@ maxStringContentLength
           -->
           <serviceMetadata httpGetEnabled="true"/>
           <!--true:接收故障异常详细信息以进行调试  false避免泄露异常信息-->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+          
         </behavior>
       </serviceBehaviors>
 
       <!--定义Endpoint的行为-->
       <endpointBehaviors>
-        
+          <behavior  name="webBehabior">
+            <webHttp/>
+          </behavior>
       </endpointBehaviors>
     </behaviors>
 
