--- a/通用框架/LearnWcf/ConsoleServiceHost/App.config
+++ b/通用框架/LearnWcf/ConsoleServiceHost/App.config
@@ -146,6 +146,7 @@ maxStringContentLength
 
       <!--定义Endpoint的行为-->
       <endpointBehaviors>
+        <!--如果不加这个，webhttpbinding会报端点不匹配-->
           <behavior  name="webBehabior">
             <webHttp/>
           </behavior>
