--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,6 @@ pip-log.txt
 .mr.developer.cfg
 LearnPython/.idea/misc.xml
 LearnPython/.idea/workspace.xml
+LearnPython/.idea/workspace.xml
+LearnPython/.idea/LearnPython.iml
+*.xml
