--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,5 @@ LearnPython/.idea/workspace.xml
 LearnPython/.idea/workspace.xml
 LearnPython/.idea/LearnPython.iml
 *.xml
+LearnPython/.idea/LearnPython.iml
+LearnPython/.idea/misc.xml
