--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@ pip-log.txt
 LearnPython/.idea/misc.xml
 LearnPython/.idea/LearnPython.iml
 LearnPython/.idea/misc.xml
+LearnPython/.idea/misc.xml
