--- a/通用框架/LearnWcf/IISServiceHost/Web.config
+++ b/通用框架/LearnWcf/IISServiceHost/Web.config
@@ -20,9 +20,16 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
+        <add scheme="http" binding="basicHttpBinding"/>
         <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+        
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true">
+      <serviceActivations>
+        <!--不引入svc文件，通过注册地址来实现-->
+        <add relativeAddress="Service1.svc" service="CommonWcfServiceLibrary.Service1"/>
+      </serviceActivations>
+    </serviceHostingEnvironment>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
