--- a/通用框架/LearnWcf/ConsoleServiceHost/App.config
+++ b/通用框架/LearnWcf/ConsoleServiceHost/App.config
@@ -6,6 +6,11 @@
 
   <system.serviceModel>
     
+    <!--
+    使用DataContract  DataMember 没有标记DataMember的不会返回
+    同理 ServiceContract OperationContract 也一样
+    -->
+    
     <!--services 节点中包含着所有Service的配置说明-->
     <services>
       <!--
@@ -82,7 +87,7 @@ maxStringContentLength
           inactivityTimeout: transport不活跃的时间后，连接自动关闭
           每创建一个代理实例相当于创建一个Session,除非必要，否则不要使用session，
           -->
-          <reliableSession enabled="true" inactivityTimeout="00:08:00"/>
+          <!--<reliableSession enabled="true" inactivityTimeout="00:08:00"/>-->
         </binding>
       </wsHttpBinding>
 
