--- a/通用框架/LearnWcf/CommonWcfClient/App.config
+++ b/通用框架/LearnWcf/CommonWcfClient/App.config
@@ -24,7 +24,7 @@
           是否支持可靠的Session,意味着消息是按照发送顺序处理的，并且保证每个消息传递一次，客户端和服务器端均需配置才能支持可靠session
           inactivityTimeout: transport不活跃的时间后，连接自动关闭
           -->
-          <reliableSession enabled="true" inactivityTimeout="00:10:00"/>
+          <!--<reliableSession enabled="true" inactivityTimeout="00:10:00"/>-->
           <security mode="None" />
         </binding>
       </wsHttpBinding>
