--- a/通用框架/LearnWcf/ConsoleServiceHost/App.config
+++ b/通用框架/LearnWcf/ConsoleServiceHost/App.config
@@ -7,8 +7,12 @@
   <system.serviceModel>
     
     <!--
-    使用DataContract  DataMember 没有标记DataMember的不会返回
+    使用DataContract  DataMember 没有标记DataMember的不会返回 枚举使用 EnumMember标记
     同理 ServiceContract OperationContract 也一样
+    
+    wcf支持的类型：
+    基本类型，String,DateTime,DateTimeOffset,TimeSpan,Guid
+    List,Dictionary, Nullable类型
     -->
     
     <!--services 节点中包含着所有Service的配置说明-->
@@ -27,9 +31,9 @@
         bindingConfiguration: 指定binding的配置名，跟<bindings>下同类的<binding>的name匹配
         name: Endpoint的名称，可选属性
         -->
-        <endpoint address="" binding="webHttpBinding" bindingConfiguration="WebHttpBindingConfig" behaviorConfiguration="webBehabior" contract="CommonWcfServiceLibrary.IService1" />
+        <!--<endpoint address="" binding="webHttpBinding" bindingConfiguration="WebHttpBindingConfig" behaviorConfiguration="webBehabior" contract="CommonWcfServiceLibrary.IService1" />-->
         <endpoint address="ws" binding="wsHttpBinding" bindingConfiguration="WsHttpBindingConfig" contract="CommonWcfServiceLibrary.IService1" />
-        <endpoint address="basic" binding="basicHttpBinding" bindingConfiguration="BasicHttpBindingConfig" contract="CommonWcfServiceLibrary.IService1" />
+        <!--<endpoint address="basic" binding="basicHttpBinding" bindingConfiguration="BasicHttpBindingConfig" contract="CommonWcfServiceLibrary.IService1" />-->
         <!--暴露元数据的绑定  确实暴露了元数据，但不像设置元数据httpGetEnabled那样可以通过网页访问，可以通过添加webservice访问-->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         
