--- a/通用框架/LearnWcf/ConsoleServiceHost/App.config
+++ b/通用框架/LearnWcf/ConsoleServiceHost/App.config
@@ -66,7 +66,7 @@
         textEncoding: 此绑定上发出消息的字符集编码：  默认是Utf8TextEncoding 
         receiveTimeout: 指定为完成接收操作的时间间隔  默认值为00：01:00
         transactionFlow： 一个布尔值，指定绑定是否支持流动 WS-Transactions。默认值为 false。
-
+        尽量使用BasicHttpBinding
         -->
         <binding name="WsHttpBindingConfig" closeTimeout="00:00:30" openTimeout="00:00:30" sendTimeout="00:00:40" receiveTimeout="00:01:00" maxBufferPoolSize="5242880" maxReceivedMessageSize="67108864" textEncoding="utf-8" messageEncoding="Text">
           <!--
