--- a/NetComms/NetComms/NetComms.csproj
+++ b/NetComms/NetComms/NetComms.csproj
@@ -49,11 +49,13 @@
     <Compile Include="Models\QueueItemPriority.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\ShortGuid.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Thirds\" />
     <Folder Include="Utils\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
