--- a/ProWebApi2/LearnWebAPI/LearnWebAPI.csproj
+++ b/ProWebApi2/LearnWebAPI/LearnWebAPI.csproj
@@ -116,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Commons\Models\BaseController.cs" />
     <Compile Include="Commons\Utils\ApiControllerHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -141,7 +142,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Commons\Models\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Removable\Utils\" />
