--- a/WpfLearn/WpfLearn/packages.config
+++ b/WpfLearn/WpfLearn/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
+  <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net45" />
+  <package id="MahApps.Metro" version="1.3.0" targetFramework="net45" />
+  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net45" />
 </packages>
